option java_outer_classname = "LCDeletePolygonAreaAlarm";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting";

message DeletePolygonAreaAlarm{
	repeated int64 areaIdentify = 1;
}